v3.5.1 (XXXX-XX-XX)
-------------------

* Fixed issue #10078: FULLTEXT with sort on same field not working.

* Fixed issue #10062: AQL: could not extract custom attribute.

* Fix compilation issue with clang 10.

* Fixed error message for error 1928 ("not in orphan") to "collection is
  not in list of orphan collections".

* Fix strange shutdown hanger which came from the fact that currently
  libgcc/libmusl wrongly detect multi-threadedness in statically linked
  executables.

* Fixed a shutdown bug coming from a read/write lock race.

* Fixed a bug in the edge cache's internal memory accounting, which led
  to the edge cache underreporting its current memory usage.

* Fixed "ArangoDB is not running in cluster mode" errors in active failover setups.
  This affected at least /_admin/cluster/health.

* Made the mechanism in the Web UI of replacing and upgrading a foxx app more clear.

* Fixed the AQL sort-limit optimization which was applied in some cases it should
  not, resulting in undefined behaviour.

* Add --server.statistics-history flag to allow disabling of only the historical
  statistics.  Also added rocksdbengine.write.amplification.x100 statistics
  for measurement of compaction option impact.  Enabled non-historical
  statistics for agents.

* Fixed AQL constrained-heap sort in conjunction with fullCount.

* Added support for AQL expressions such as `a NOT LIKE b`, `a NOT =~ b` and
  `a NOT !~ b`. Previous versions of ArangoDB did not support these expressions,
  and using them in an AQL query resulted in a parse error.

* Disallow creation of TTL indexes on sub-attributes.

  Creation of such indexes was not caught before, but the resulting
  indexes were defunct. From now on the creation of TTL indexes on sub-
  attributes is disallowed.

* Added HotBackup feature.

* Improved database creation within the cluster. In the case of
  coordinator outages during the creation of the database there was a